tested LDA model. Split every sentence in text to a doc and applyied LDA and LSA

--- a/one_restuarant.ipynb
+++ b/one_restuarant.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 63,
    "metadata": {
     "collapsed": true
    },
@@ -62,6 +62,7 @@
     "from nltk.corpus import stopwords\n",
     "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
     "from sklearn.decomposition import TruncatedSVD\n",
+    "from sklearn.decomposition import LatentDirichletAllocation\n",
     "import cleaner\n",
     "\n",
     "%matplotlib inline"
@@ -228,6 +229,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### TFIDF Vectorizer"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {
@@ -260,6 +268,13 @@
    "source": [
     "X = tfidf.toarray()\n",
     "X.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### LSA Model"
    ]
   },
   {
@@ -307,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -341,6 +356,252 @@
    ],
    "source": [
     "lsa.components_.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Applying LDA Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/lib/python3.6/site-packages/sklearn/decomposition/online_lda.py:294: DeprecationWarning: n_topics has been renamed to n_components in version 0.19 and will be removed in 0.21\n",
+      "  DeprecationWarning)\n",
+      "/anaconda3/lib/python3.6/site-packages/sklearn/decomposition/online_lda.py:536: DeprecationWarning: The default value for 'learning_method' will be changed from 'online' to 'batch' in the release 0.20. This warning was introduced in 0.18.\n",
+      "  DeprecationWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "LatentDirichletAllocation(batch_size=128, doc_topic_prior=None,\n",
+       "             evaluate_every=-1, learning_decay=0.7, learning_method=None,\n",
+       "             learning_offset=10.0, max_doc_update_iter=100, max_iter=10,\n",
+       "             mean_change_tol=0.001, n_components=10, n_jobs=1, n_topics=2,\n",
+       "             perp_tol=0.1, random_state=None, topic_word_prior=None,\n",
+       "             total_samples=1000000.0, verbose=0)"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lda = LatentDirichletAllocation(n_topics=2)\n",
+    "lda.fit(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Topic 1: ['food', 'table', 'minute', 'server', 'service', 'salad', 'place', 'came', 'waited', 'good', 'time', 'bread', 'drink', 'like', 'dish', 'got', 'ordered', 'pasta', 'check', 'buca', 'chicken', 'min', 'asked', 'order', 'said', 'terrible', 'dinner', 'experience', 'restaurant', 'garlic']\n",
+      "Topic 2: ['food', 'manager', 'order', 'service', 'card', 'restaurant', 'coupon', 'got', 'ask', 'day', 'italian', 'place', 'asked', 'waiter', 'left', 'came', 'buca', 'family', 'party', 'customer', 'location', 'pasta', 'email', 'time', 'dinner', 'server', 'people', 'maybe', 'refill', 'know']\n"
+     ]
+    }
+   ],
+   "source": [
+    "cleaner.show_topics(lda.components_, terms, length=30)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Building the model with every sentence as a document"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "new_corpus = []\n",
+    "for sent in corpus:\n",
+    "    new_corpus.extend(sent.split(\",\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "cleaned = cleaner.clean_stem(new_corpus, tokenizer, lemma, sw)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "tfidf_vectorizer= TfidfVectorizer(max_df=0.95, min_df=2,\n",
+    "                                stop_words='english')\n",
+    "\n",
+    "tfidf = tfidf_vectorizer.fit_transform(cleaned)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(446, 655)"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = tfidf.toarray()\n",
+    "X.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Applying LSA Model to sentence to doc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TruncatedSVD(algorithm='randomized', n_components=2, n_iter=5,\n",
+       "       random_state=42, tol=0.0)"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lsa.fit(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "terms = terms = tfidf_vectorizer.get_feature_names()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Topic 1: ['food', 'minute', 'table', 'service', 'time', 'order', 'came', 'server', 'got', 'drink', 'good', 'manager', 'waited', 'said', 'buca', 'place', 'like', 'ordered', 'pasta', 'asked', 'night', 'experience', 'check', 'chicken', 'restaurant', 'bread', 'went', 'dinner', 'left', 'took']\n",
+      "Topic 2: ['minute', 'salad', 'order', 'waited', 'table', 'drink', 'seated', 'server', 'got', 'waiting', 'bread', 'night', 'ordered', 'finally', 'came', 'wait', 'let', 'took', 'brought', 'gave', 'busy', 'plate', 'asked', 'waiter', 'walk', 'right', 'time', 'greet', 'bar', 'arrived']\n"
+     ]
+    }
+   ],
+   "source": [
+    "cleaner.show_topics(lsa.components_, terms, length=30)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Applying LDA Model to sentence to doc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/lib/python3.6/site-packages/sklearn/decomposition/online_lda.py:294: DeprecationWarning: n_topics has been renamed to n_components in version 0.19 and will be removed in 0.21\n",
+      "  DeprecationWarning)\n",
+      "/anaconda3/lib/python3.6/site-packages/sklearn/decomposition/online_lda.py:536: DeprecationWarning: The default value for 'learning_method' will be changed from 'online' to 'batch' in the release 0.20. This warning was introduced in 0.18.\n",
+      "  DeprecationWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "LatentDirichletAllocation(batch_size=128, doc_topic_prior=None,\n",
+       "             evaluate_every=-1, learning_decay=0.7, learning_method=None,\n",
+       "             learning_offset=10.0, max_doc_update_iter=100, max_iter=10,\n",
+       "             mean_change_tol=0.001, n_components=10, n_jobs=1, n_topics=2,\n",
+       "             perp_tol=0.1, random_state=None, topic_word_prior=None,\n",
+       "             total_samples=1000000.0, verbose=0)"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lda.fit(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Topic 1: ['dish', 'salad', 'check', 'came', 'table', 'server', 'asked', 'terrible', 'finally', 'food', 'try', 'card', 'chicken', 'sauce', 'said', 'ordered', 'told', 'walked', 'like', 'meal', 'paying', 'arrived', 'restaurant', 'left', 'busy', 'ok', 'away', 'wait', 'manager', 'point']\n",
+      "Topic 2: ['food', 'place', 'buca', 'service', 'minute', 'order', 'good', 'experience', 'time', 'italian', 'choice', 'nice', 'night', 'got', 'di', 'table', 'went', 'manager', 'seated', 'mean', 'bread', 'family', 'restaurant', 'party', 'pasta', 'waiting', 'waited', 'birthday', 've', 'year']\n"
+     ]
+    }
+   ],
+   "source": [
+    "cleaner.show_topics(lda.components_, terms, length=30)"
    ]
   },
   {
