used spark to filter out restaurants not in US

--- a/one_restuarant.ipynb
+++ b/one_restuarant.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
     }
    ],
    "source": [
-    "df3 = spark.sql(\"SELECT new.user_name, new.user_id, new.business_id, new.friends, \\\n",
+    "df3 = spark.sql(\"\"\"SELECT new.user_name, new.user_id, new.business_id, new.friends, \\\n",
     "                b.name AS business_name, b.state, b.city, b.address, b.categories, b.stars AS bus_star,\\\n",
     "                new.text, new.stars AS review_star \\\n",
     "                FROM \\\n",
@@ -128,8 +128,95 @@
     "                    ON r.user_id = u.user_id) AS new\\\n",
     "                INNER JOIN business as b\\\n",
     "                ON new.business_id = b.business_id \\\n",
-    "                WHERE ARRAY_CONTAINS(b.categories, 'Restaurants')\")\n",
+    "                WHERE ARRAY_CONTAINS(b.categories, 'Restaurants') AND b.state IN (\"AL\",\"AK\",\"AZ\",\"AR\",\"CA\",\"CO\",\"CT\",\"DE\",\"FL\",\"GA\",\"HI\",\"ID\",\"IL\",\"IN\",\"IA\",\"KS\",\"KY\",\"LA\",\"ME\",\"MD\",\"MA\",\"MI\",\"MN\",\"MS\",\"MO\",\"MT\",\"NE\",\"NV\",\"NH\",\"NJ\",\"NM\",\"NY\",\"NC\",\"ND\",\"OH\",\"OK\",\"OR\",\"PA\",\"RI\",\"SC\",\"SD\",\"TN\",\"TX\",\"UT\",\"VT\",\"VA\",\"WA\",\"WV\",\"WI\",\"WY\") \"\"\")\n",
     "df3.show(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2598115"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df3.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----+-------+\n",
+      "|state|count  |\n",
+      "+-----+-------+\n",
+      "|AZ   |920258 |\n",
+      "|SC   |6808   |\n",
+      "|VA   |3      |\n",
+      "|NV   |1041803|\n",
+      "|WI   |75039  |\n",
+      "|CA   |4      |\n",
+      "|NC   |201416 |\n",
+      "|IL   |24174  |\n",
+      "|IN   |25     |\n",
+      "|OH   |169961 |\n",
+      "|PA   |158518 |\n",
+      "|NY   |79     |\n",
+      "|CO   |6      |\n",
+      "|AK   |21     |\n",
+      "+-----+-------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df3.select(\"state\").groupBy(\"state\").count().show(50,False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----+---------------------+\n",
+      "|state|address              |\n",
+      "+-----+---------------------+\n",
+      "|NV   |3355 Las Vegas Blvd S|\n",
+      "|NV   |3355 Las Vegas Blvd S|\n",
+      "|NV   |3355 Las Vegas Blvd S|\n",
+      "|NV   |3355 Las Vegas Blvd S|\n",
+      "|NV   |3355 Las Vegas Blvd S|\n",
+      "|NV   |3355 Las Vegas Blvd S|\n",
+      "|NV   |3355 Las Vegas Blvd S|\n",
+      "|NV   |3355 Las Vegas Blvd S|\n",
+      "|NV   |3355 Las Vegas Blvd S|\n",
+      "|NV   |3355 Las Vegas Blvd S|\n",
+      "+-----+---------------------+\n",
+      "only showing top 10 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df3.where(\"state = 'NV'\").select([\"state\", \"address\"]).show(10, False)"
    ]
   },
   {
