created negative and positive dictionary of terms

--- a/yelp_review.ipynb
+++ b/yelp_review.ipynb
@@ -656,6 +656,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 72,
    "metadata": {
     "collapsed": true
@@ -721,6 +730,142 @@
    "source": [
     "df_1_5.select(\"review_star\").groupBy(\"review_star\").count().show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pos_terms, neg_terms = cleaner.show_topics(lreg.coef_, terms, length=40)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('great', 9.6339199219398921),\n",
+       " ('delicious', 9.5086695708994373),\n",
+       " ('amazing', 7.9170599102536379),\n",
+       " ('best', 7.3589483682208217),\n",
+       " ('excellent', 6.6895446573983914),\n",
+       " ('love', 6.3849393517080557),\n",
+       " ('awesome', 5.6882532659470213),\n",
+       " ('favorite', 5.6378331048222989),\n",
+       " ('friendly', 5.3344655463092208),\n",
+       " ('perfect', 5.1487301606386211),\n",
+       " ('fantastic', 4.9271576211302959),\n",
+       " ('madison', 4.5292909003664485),\n",
+       " ('definitely', 4.486343438415247),\n",
+       " ('loved', 4.0306943032514306),\n",
+       " ('wonderful', 3.9535371632915139),\n",
+       " ('good', 3.8106663126652971),\n",
+       " ('happy', 3.7261373823249087),\n",
+       " ('fresh', 3.4802625832525842),\n",
+       " ('nice', 3.3065880195360347),\n",
+       " ('perfectly', 3.0823391451468418),\n",
+       " ('highly', 2.9778623076666277),\n",
+       " ('tasty', 2.9082167789912066),\n",
+       " ('outstanding', 2.8545282365526417),\n",
+       " ('ve', 2.8206297853641185),\n",
+       " ('enjoyed', 2.6887189898520636),\n",
+       " ('fun', 2.596468899456712),\n",
+       " ('little', 2.5549889693513079),\n",
+       " ('attentive', 2.5345851110853932),\n",
+       " ('fast', 2.4638339969770398),\n",
+       " ('super', 2.3439106507574947),\n",
+       " ('yummy', 2.3407288471590419),\n",
+       " ('incredible', 2.333495306683453),\n",
+       " ('thank', 2.3192592330362323),\n",
+       " ('flavorful', 2.2727534003422805),\n",
+       " ('bit', 2.257463602047121),\n",
+       " ('helpful', 2.2478394635570775),\n",
+       " ('yum', 2.1938197140672746),\n",
+       " ('try', 2.1724875526296352),\n",
+       " ('notch', 2.1302856301218953),\n",
+       " ('reasonable', 2.107079463937191)]"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pos_terms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('worst', -7.8428487355547984),\n",
+       " ('terrible', -6.3079030915106147),\n",
+       " ('horrible', -5.751475018400706),\n",
+       " ('bland', -5.1065524302327372),\n",
+       " ('awful', -4.8790553173531208),\n",
+       " ('rude', -4.6553109680826168),\n",
+       " ('disappointing', -4.5527040275278674),\n",
+       " ('poor', -4.5292789281254802),\n",
+       " ('mediocre', -4.5238552456152945),\n",
+       " ('bad', -4.4682088611261186),\n",
+       " ('minute', -4.313426659289445),\n",
+       " ('told', -3.9543664624267665),\n",
+       " ('ok', -3.858301806403829),\n",
+       " ('dry', -3.8292530674849785),\n",
+       " ('asked', -3.5862004447195974),\n",
+       " ('disgusting', -3.5675109238113314),\n",
+       " ('tasted', -3.536419801643381),\n",
+       " ('cold', -3.448647333203243),\n",
+       " ('overpriced', -3.3473641044353819),\n",
+       " ('tasteless', -3.3292811357064571),\n",
+       " ('money', -3.2726399181447468),\n",
+       " ('slow', -3.2396165759347912),\n",
+       " ('dirty', -3.2147656019520117),\n",
+       " ('ordered', -3.2110760494267212),\n",
+       " ('gross', -3.1794458033762432),\n",
+       " ('worse', -3.1079818464443512),\n",
+       " ('customer', -2.9925095943697189),\n",
+       " ('charged', -2.9689180757806759),\n",
+       " ('frozen', -2.8625362889855053),\n",
+       " ('left', -2.862506312445793),\n",
+       " ('flavorless', -2.8176413482381366),\n",
+       " ('management', -2.7533401007716223),\n",
+       " ('said', -2.7399812916314623),\n",
+       " ('disappointment', -2.6968281052132874),\n",
+       " ('waste', -2.6751619119112071),\n",
+       " ('unfortunately', -2.6709828452872486),\n",
+       " ('soggy', -2.6622381580119558),\n",
+       " ('waited', -2.6586246654747745),\n",
+       " ('barely', -2.6073677537503377),\n",
+       " ('sorry', -2.5424010638207819)]"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "neg_terms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
