--- a/yelp_review.ipynb
+++ b/yelp_review.ipynb
@@ -43,11 +43,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
+    "# %load_ext autoreload\n",
     "%autoreload 2\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -64,6 +64,7 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.linear_model import ElasticNet\n",
     "from sklearn.linear_model import Lasso\n",
+    "from sklearn.metrics import confusion_matrix\n",
     "import cleaner\n",
     "\n",
     "%matplotlib inline"
@@ -503,57 +504,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ElasticNet Linear model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "ElasticNet(alpha=0.001, copy_X=True, fit_intercept=True, l1_ratio=0.5,\n",
-       "      max_iter=1000, normalize=False, positive=False, precompute=False,\n",
-       "      random_state=None, selection='cyclic', tol=0.0001, warm_start=False)"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "en = ElasticNet(alpha=0.001)\n",
-    "en.fit(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.16814933221760098"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#R^2 score\n",
-    "en.score(X_test, y_test)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Lasso Linear model"
    ]
   },
@@ -634,24 +584,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 124,
    "metadata": {
     "scrolled": true
    },
+   "outputs": [],
+   "source": [
+    "y_pred = lreg.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def metrics(y_test, y_predict):\n",
+    "    tn, fp, fn, tp = confusion_matrix(y_test, y_predict).ravel()\n",
+    "    matrix = np.array([[tp, fp], [fn, tn]])\n",
+    "    recall = tp/(tp+fn)\n",
+    "    accuracy = (tp+tn)/(tn+fp+fn+tp)\n",
+    "    return matrix, recall, accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matrix, recall, precision = metrics(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.96724704736393519"
+       "array([[6434,  219],\n",
+       "       [  50, 1510]])"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lreg.score(X_test, y_test)"
+    "#confusion matrix\n",
+    "matrix"
    ]
   },
   {
@@ -662,6 +648,25 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recall: 99.23%\n",
+      "Accuracy: 96.72%\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Recall: {}%\".format(round(recall*100, 2)))\n",
+    "print(\"Accuracy: {}%\".format(round(precision*100, 2)))"
+   ]
   },
   {
    "cell_type": "code",
