used all star-ratings as classes

--- a/sage_yelp.ipynb
+++ b/sage_yelp.ipynb
@@ -2594,95 +2594,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = ReviewClassifier()"
+    "model = ReviewClassifier()\n",
+    "model.fit(X_train, y_train)\n",
+    "y_pred = model.predict(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
-       "          intercept_scaling=1, max_iter=100, multi_class='ovr', n_jobs=1,\n",
-       "          penalty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
-       "          verbose=0, warm_start=False)"
+       "array([5, 4, 2, ..., 3, 5, 4])"
       ]
      },
-     "execution_count": 209,
+     "execution_count": 233,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lreg = LogisticRegression()\n",
-    "lreg.fit(X_train, y_train)"
+    "y_test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 232,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2205,  364,  109,  114,  237],\n",
+       "       [ 679,  723,  521,  380,  263],\n",
+       "       [ 193,  349,  932, 1486,  566],\n",
+       "       [  73,   62,  352, 3840, 3138],\n",
+       "       [  57,   18,   68, 1732, 8977]])"
+      ]
+     },
+     "execution_count": 232,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "confusion_matrix(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred = lreg.predict(X_test)"
+    "matrix, recall, precision, accuracy = model.metrics_eval(X_test, y_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def confu(y_test, y_pred):\n",
-    "    tp, tn, fp, fn = 0,0,0,0\n",
-    "    for x,y in zip(y_test, y_pred):\n",
-    "        if x == y:\n",
-    "            if x > 3:\n",
-    "                tp+=1\n",
-    "            else:\n",
-    "                tn+=1\n",
-    "        elif x != y:\n",
-    "            if y>3:\n",
-    "                fp+=1\n",
-    "            elif y<3:\n",
-    "                fn+1\n",
-    "    return tp, tn, fp, fn"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 212,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def metrics(y_test, y_pred):\n",
-    "    tp, tn, fp, fn = confu(y_test, y_pred)\n",
-    "    matrix = np.array([[tp, fp], [fn, tn]])\n",
-    "    recall = tp/(tp+fn)\n",
-    "    precision = tp/(fp+tp)\n",
-    "    accuracy = (tp+tn)/(tn+fp+fn+tp)\n",
-    "    return matrix, recall, precision, accuracy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 213,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "matrix, recall, precision, accuracy = metrics(y_test, y_pred)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [
     {
@@ -2692,7 +2668,7 @@
        "       [    0,  3860]])"
       ]
      },
-     "execution_count": 214,
+     "execution_count": 223,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2704,7 +2680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [
     {
@@ -2725,17 +2701,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [],
    "source": [
     "# terms = tfidf_vectorizer.get_feature_names()\n",
-    "pos_terms, neg_terms = cleaner.show_topics(lreg.coef_, terms, length=40)"
+    "pos_terms, neg_terms = model.feature_importance(terms,40)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [
     {
@@ -2783,7 +2759,7 @@
        " ('alex', 2.3492792319335174)]"
       ]
      },
-     "execution_count": 218,
+     "execution_count": 229,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2794,7 +2770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [
     {
@@ -2842,116 +2818,13 @@
        " ('bit', -2.665712550705947)]"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 230,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "neg_terms"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Random forest "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 142,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
-       "            max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
-       "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
-       "            min_samples_leaf=1, min_samples_split=2,\n",
-       "            min_weight_fraction_leaf=0.0, n_estimators=10, n_jobs=1,\n",
-       "            oob_score=False, random_state=None, verbose=0,\n",
-       "            warm_start=False)"
-      ]
-     },
-     "execution_count": 142,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rf = RandomForestClassifier()\n",
-    "rf.fit(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 143,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rf_pred = rf.predict(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 144,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "matrix, recall, precision, accuracy = metrics(y_test, rf_pred)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 145,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[11108, 10348],\n",
-       "       [    0,  2587]])"
-      ]
-     },
-     "execution_count": 145,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "matrix"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 146,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Recall: 100.0%\n",
-      "Precision: 51.77%\n",
-      "Accuracy: 56.96%\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Recall: {}%\".format(round(recall*100, 2)))\n",
-    "print(\"Precision: {}%\".format(round(precision*100, 2)))\n",
-    "print(\"Accuracy: {}%\".format(round(accuracy*100, 2)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 147,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rf.class_weight"
    ]
   },
   {
