--- a/sage_yelp.ipynb
+++ b/sage_yelp.ipynb
@@ -1803,7 +1803,9 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -1840,7 +1842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1907,7 +1909,7 @@
        "6  Great food!! I am a big fan of pancakes..they ...          5"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1922,7 +1924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -1934,7 +1936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1951,7 +1953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1960,7 +1962,7 @@
        "'If you can get in the door...go! Go immediately. Everything here is good. Literally, everything.\\n\\nCute little neighborhoody spot with excellent homemade food. What more do you need?'"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1971,7 +1973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -1983,7 +1985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
@@ -1996,18 +1998,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 39,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "cleaned = util.clean_stem(corpus, tokenizer, lemma, sw)"
+    "cleaned = util.clean_stem(corpus)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -2016,7 +2016,7 @@
        "'get door go go immediately everything good literally everything cute little neighborhoody spot excellent homemade food need'"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2027,21 +2027,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'visiting sf checked yelp found place small converted house sit watch kitchen food excellent eggplant red pepper omelet peach waffle waffle light fluffy fresh whipped creme got pastry go also good particular chocolate croissant unique great place informal breakfast'"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\".join(cleaned[:1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of words before cleaning, and removing stopwords: 176\n",
-      "Number of words after cleaning, and removing stopwords: 80\n"
+      "Number of words before cleaning, and removing stopwords: 125305337\n",
+      "Number of words after cleaning, and removing stopwords: 63167018\n"
      ]
     }
    ],
    "source": [
-    "print(\"Number of words before cleaning, and removing stopwords: {}\".format(len(corpus[3].split())))\n",
-    "print(\"Number of words after cleaning, and removing stopwords: {}\".format(len(cleaned[3].split())))"
+    "\n",
+    "print(\"Number of words before cleaning, and removing stopwords: {}\".format(len(\"\".join(corpus).split())))\n",
+    "print(\"Number of words after cleaning, and removing stopwords: {}\".format(len(\"\".join(cleaned).split())))"
    ]
   },
   {
